cabal-version:      3.0
name:               sashakt
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
-- A URL where users can report bugs.
-- bug-reports:
-- The license under which the package is released.
-- license:
author:             piyush.garg
maintainer:         piyush.garg@juspay.in

extra-source-files: CHANGELOG.md
executable sashakt
    main-is:          Parser.hs
    other-modules:    ModuleParser
    build-depends:    base,
                      filepath,
                      template-haskell,
                      references,
                      split,               
                      ghc,
                      ghc-paths,
                      uniplate,
                      classyplate,
                      criterion,
                      mtl,
                      ghc-exactprint,
                      strict,
                      Diff,
                      pretty,
                      directory,
                      containers,
                      time,
                      async,
                      aeson,
                      bytestring,
                      unliftio,
                      syb,
                      ghc-boot
    hs-source-dirs:   app
    default-language: Haskell2010
    -- ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -qa -n4m -A64m -AL512m" -O2 -j